# twitch-tools

./: .gitignore  Justfile  LICENSE  README.md  env.example  index.html  llm.txt  package-lock.json  package.json  vite.config.ts
.cursor/rules/: react.mdc
.openhands/microagents/: repo.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chat.rs  lib.rs  main.rs  tts.rs
