[package]
name = "twitch-tools"
version = "0.0.1"
description = "A Tauri App Containing Tools for Twitch Streamers"
authors = ["Timesurge Labs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "twitch_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
piper-rs = "0.1.9"
lazy_static = "1.5.0"
tauri-plugin-fs = "2"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
regex = "1.10"
rodio = "0.20.1"
log = "0.4.26"
simplelog = "0.12.2"


[dependencies.uuid]
version = "1.16.0"
features = ["v4"]
